# coremind

./: .cursorignore  .dockerignore  .editorconfig  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Justfile  README.md  docker-compose.yml  pyproject.toml  test_output.txt
.cursor/commands/: add-plugin.md  architect.md  debugger.md  design-review.md  execute-phase-task.md  integrator.md  phase-executor.md  reviewer.md
.cursor/rules/: coremind.mdc  docs.mdc  proto.mdc  python.mdc  tests.mdc
.github/: copilot-instructions.md
.github/agents/: architect.agent.md  debugger.agent.md  integrator.agent.md  phase-executor.agent.md  reviewer.agent.md
.github/instructions/: docs.instructions.md  proto.instructions.md  python.instructions.md  tests.instructions.md
.github/prompts/: add-plugin.prompt.md  design-review.prompt.md  execute-phase-task.prompt.md
.github/workflows/: ci.yml
benchmarks/2026-05-26-local-llm/: RESULTS-v2.md  RESULTS.md  bench.py  bench_v2.py  results_raw.json  results_v2_raw.json
docker/: entrypoint.sh
docs/: ARCHITECTURE.md  CONVENTIONS.md  CoreMind-Presentation.pptx  DEVELOPMENT.md  EXECUTIVE_SUMMARY.md  FAQ.md  INTEGRATIONS.md  RELEASE.md  TROUBLESHOOTING.md  auto-concern-resolution.md
docs/bugs/: 2026-05-31-false-positives.md  DEBUG_2026-05-30.md
docs/diagrams/: 01-system-overview.drawio  02-process-topology.drawio  03-data-model.drawio  04-autonomy-slider.drawio  05-embedding-world.drawio  05-openclaw-integration.drawio  06-auto-investigation.drawio  07-meta-loop.drawio  08-openclaw-integration.drawio  README.md
docs/diagrams/v1-archive/: 02-process-topology.drawio  04-graduated-agency.drawio  README.md
docs/phases/: PHASE_0_FOUNDATIONS.md  PHASE_1_CORE_DAEMON.md  PHASE_2_5_OPENCLAW_ADAPTER.md  PHASE_2_MEMORY_REASONING.md  PHASE_3_INTENTION_ACTION.md  PHASE_4_REFLECTION_ECOSYSTEM.md  README.md
docs/phases/v2/: ARCHITECTURE.md  EXECUTIVE_SUMMARY.md  PHASE_0_SOVEREIGNTY.md  PHASE_1_AUTONOMY_SLIDER.md  PHASE_2A_META_SCHEMAS.md  PHASE_2B_META_OBSERVER.md  PHASE_2C_EVALUATOR_SAFETY.md  (+41 more)
docs/plugins/: SELF_MODEL.md  world-data-plugin.md
integrations/openclaw-adapter/: README.md  openclaw_side_bridge.py
integrations/openclaw-adapter/coremind_side/: pyproject.toml
integrations/openclaw-adapter/coremind_side/coremind_plugin_openclaw/: __init__.py  __main__.py  action_dispatcher.py  main.py  manifest.toml  openclaw_client.py  plugin_side.py  server.py  translators.py
integrations/openclaw-adapter/coremind_side/coremind_plugin_openclaw/_generated/: adapter_pb2.py  adapter_pb2.pyi  adapter_pb2_grpc.py
integrations/openclaw-adapter/coremind_side/coremind_plugin_openclaw/schemas/: approve_request.json  cancel_cron.json  invoke_skill.json  notify.json  schedule_cron.json
plugins/firefly/: README.md  pyproject.toml
plugins/firefly/coremind_plugin_firefly/: main.py  manifest.toml
plugins/gmail-imap/: README.md  pyproject.toml
plugins/gmail-imap/coremind_plugin_gmail_imap/: __init__.py  __main__.py  config.toml  main.py  manifest.toml
plugins/gog/: pyproject.toml
plugins/gog/coremind_plugin_gog/: __init__.py  config.toml  main.py
plugins/health/: README.md  pyproject.toml
plugins/health/coremind_plugin_health/: main.py  manifest.toml
plugins/homeassistant/: README.md  pyproject.toml
plugins/homeassistant/coremind_plugin_homeassistant/: __init__.py  __main__.py  config.toml  effector.py  main.py  manifest.toml
plugins/systemstats/: README.md  pyproject.toml
plugins/systemstats/coremind_plugin_systemstats/: __init__.py  __main__.py  collector.py  main.py  manifest.toml
plugins/tapo/: pyproject.toml
plugins/tapo/coremind_plugin_tapo/: __init__.py  config.toml  main.py  manifest.toml
plugins/vikunja/: README.md  pyproject.toml
plugins/vikunja/coremind_plugin_vikunja/: main.py  manifest.toml
plugins/weather/: README.md  pyproject.toml
plugins/weather/coremind_plugin_weather/: main.py  manifest.toml
plugins/webcam/: pyproject.toml
plugins/webcam/coremind_plugin_webcam/: __init__.py  config.toml  main.py  manifest.toml
plugins/worlddata/: README.md  pyproject.toml  world_data.toml
plugins/worlddata/coremind_plugin_worlddata/: main.py
plugins/worlddata/coremind_plugin_worlddata/collectors/: __init__.py  airquality.py  crypto.py  gasprice.py  traffic.py
scripts/: build_pptx.py  coremind-logrotate.conf  fetch_sleep.py  healthcheck.sh  restart.sh  seed-narrative.sh  start-all.sh  validate_specs.py  watchdog-external.sh
spec/: README.md  audit_log.md  plugin.proto  worldevent.md  worldevent.schema.json
src/coremind/: __init__.py  config.py  errors.py  plugin_helpers.py
tests/: conftest.py  test_e2e.py
tests/action/: test_action_classes.py  test_approvals.py  test_autonomy.py  test_autonomy_store.py  test_executor_router.py  test_forced_classes.py  test_graduation.py  test_journal.py
tests/cli/: test_cli.py  test_meta_cli.py  test_phase3_cli.py
tests/core/: test_daemon.py  test_event_bus.py
tests/crypto/: test_signatures.py
tests/dashboard/: __init__.py  test_meta_views.py  test_server.py
tests/intention/: test_loop.py  test_persistence.py  test_prompts.py  test_salience.py
tests/memory/: test_embeddings.py  test_episodic.py  test_narrative.py  test_procedural.py  test_semantic.py
tests/meta/: test_adjuster.py  test_evaluator.py  test_loop.py  test_observer.py  test_safety.py  test_schemas.py
tests/notify/: test_quiet_hours.py  test_router.py
tests/personalization/: test_config.py
tests/plugin_host/: test_registry.py  test_server.py
tests/reasoning/: test_llm.py  test_loop.py  test_prompts.py  test_schemas.py
tests/reflection/: test_calibration.py  test_evaluator.py  test_loop.py  test_report.py  test_rule_learner.py  test_store.py
tests/scenarios/: test_release_scenarios.py
tests/self_model/: conftest.py  test_config.py  test_entities.py  test_store.py
tests/world/: test_compressed_prompt.py  test_differ.py  test_embeddings.py  test_integration_pipeline.py  test_pipeline.py  test_snapshot_memory.py  test_store.py
(+148 files in other folders)
