[project]
name = "coremind"
version = "0.0.1"
description = "A framework for continuous personal intelligence."
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Guillaume Gagnon" }]
requires-python = ">=3.12"
keywords = ["ai", "agent", "cognitive", "personal-intelligence"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "aiohttp>=3.10.0",
    "aioimaplib>=1.1.0",
    "click>=8.1.0",
    "cryptography>=43.0.0",
    "grpcio>=1.66.0",
    "jcs>=0.2.1",
    "jinja2>=3.1.0",
    "litellm>=1.50.0",
    "pydantic>=2.9.0",
    "qdrant-client>=1.11.0",
    "structlog>=24.4.0",
    "surrealdb>=1.0.0",
]

[project.scripts]
coremind = "coremind.cli:cli"

[project.optional-dependencies]
embeddings-local = ["sentence-transformers>=3.0.0"]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "jsonschema>=4.23.0",
    "grpcio>=1.66.0",
    "grpcio-tools>=1.66.0",
    "grpc-stubs>=1.53.0",
    "types-protobuf>=5.0.0",
    "pydantic>=2.9.0",
    "psutil>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/gagnongui/coremind"
Repository = "https://github.com/gagnongui/coremind"
Documentation = "https://github.com/gagnongui/coremind/tree/main/docs"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/coremind"]

# --------------------------------------------------------------------
# Ruff
# --------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
extend-exclude = ["**/_generated/**"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # Pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "N",     # pep8-naming
    "SIM",   # flake8-simplify
    "PL",    # pylint
    "RUF",   # ruff-specific
    "ANN",   # flake8-annotations
    "ASYNC",
    "S",     # bandit
    "A",     # flake8-builtins
    "COM",   # flake8-commas
    "DTZ",   # flake8-datetimez — enforce timezone-aware datetimes
    "PIE",
    "RET",
    "TID",
    "PTH",   # flake8-use-pathlib
    "ERA",   # eradicate
    "T20",   # flake8-print
]
ignore = [
    "COM812",  # conflicts with formatter
    "ANN401",  # allow `Any` in rare places with justification
    "PLR0913", # too many arguments — sometimes necessary
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",
    "PLR2004",
    "ANN",
] # assert/magic-values/annotations are fine in tests
"scripts/**/*.py" = [
    "T20",
    "S603",
    "S607",
] # CLI scripts are allowed to print and shell out
"scripts/build_pptx.py" = ["ALL"]  # presentation builder, not production code
"integrations/openclaw-adapter/openclaw_side_bridge.py" = [
    "N802", "ANN", "ASYNC230", "PTH123", "F401", "I001", "E501",
]  # gRPC bridge: CamelCase methods, JSONL queue I/O
"plugins/**/*.py" = [
    "ANN", "E501", "E401", "E701", "E702", "E722",
    "F401", "PLR2004", "ASYNC210", "N802", "E741", "I001", "PTH123",
    "PLR0912", "PLR0915", "S603", "PLW1510", "B008", "ASYNC240", "PLC0415", "S112",
]  # plugin code predates strict lint rules; retry loops add complexity
"src/coremind/dashboard/views.py" = ["E402", "I001"]
"src/coremind/plugin_host/server.py" = ["B008", "PLC0415"]
"src/coremind/intention/loop.py" = ["E501", "PLR2004"]
"src/coremind/core/daemon.py" = [
    "PLR0915", "PLR0912", "PLC0415", "ANN001", "ANN202", "PTH123", "E501", "ASYNC230",
]
"src/coremind/action/effectors.py" = [
    "PLC0415", "PLR0911", "S603", "S607", "PLW1510",
    "PLW2901", "PLR2004", "ASYNC221",
]
"src/coremind/action/executor.py" = ["E501"]
"src/coremind/cli/__init__.py" = [
    "PLC0415", "PLR0915", "ANN202",
]
"src/coremind/cli/reflect_ports.py" = [
    "PLC0415", "PLR0915", "ANN202",
]
"src/coremind/intention/prompts.py" = ["E501"]
"src/coremind/reasoning/loop.py" = ["PTH123", "PTH103", "PTH120", "PTH111", "PLC0415", "S110", "PLR2004", "E401", "I001"]
"src/coremind/reasoning/prompts.py" = ["E501"]
"src/coremind/reasoning/schemas.py" = ["E501"]
"src/coremind/reflection/loop.py" = ["E501"]
"src/coremind/conversation/handler.py" = ["PLC0415", "DTZ005"]
"src/coremind/presence/detector.py" = ["PLR0911", "PLR0912", "PLR2004", "E501"]
"src/coremind/presence/scheduler.py" = ["DTZ005", "PLR2004"]
"src/coremind/notify/adapters/nest_hub.py" = ["PTH123", "PTH111"]
"src/coremind/plugin_helpers.py" = ["PLC0415"]
"src/coremind/prediction/schemas.py" = ["E501"]
"src/coremind/prediction/predictor.py" = ["E501", "S110", "S112", "SIM105", "PLR2004", "UP035"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# --------------------------------------------------------------------
# Mypy
# --------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_return_any = true
warn_redundant_casts = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
show_error_codes = true
pretty = true
exclude = ["_generated"]
mypy_path = [
    "src",
    "plugins/systemstats",
    "plugins/homeassistant",
    "plugins/gmail-imap",
    "integrations/openclaw-adapter/coremind_side",
]

[[tool.mypy.overrides]]
module = [
    "coremind.plugin_api._generated.*",
    "coremind_plugin_openclaw._generated.*",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["coremind.action.effectors", "coremind.cli.reflect_ports"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["coremind.prediction.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["sentence_transformers", "aioimaplib", "litellm"]
ignore_missing_imports = true

# --------------------------------------------------------------------
# Pytest
# --------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = [
    "src",
    "plugins/systemstats",
    "plugins/homeassistant",
    "plugins/gmail-imap",
    "integrations/openclaw-adapter/coremind_side",
]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=src/coremind",
    "--cov-report=term-missing",
]
markers = [
    "integration: tests requiring external services (docker-compose)",
    "e2e: full end-to-end scenarios",
    "slow: tests that take > 1 second",
    "unit: fast unit tests with no I/O",
]

[tool.coverage.run]
branch = true
source = ["src/coremind"]
omit = ["*/_generated/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
