[project]
name = "coremind-plugin-gog"
version = "0.1.0"
description = "Google Workspace (Gmail + Calendar) sensor plugin for CoreMind via gog CLI."
requires-python = ">=3.12"
dependencies = [
    "coremind>=0.0.1",
    "grpcio>=1.66.0",
    "structlog>=24.4.0",
]

[project.scripts]
coremind-plugin-gog = "coremind_plugin_gog.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["coremind_plugin_gog"]
