[project]
name = "coremind-plugin-tapo"
version = "0.1.0"
description = "Tapo C225 camera sensor plugin for CoreMind."
requires-python = ">=3.12"
dependencies = [
    "coremind>=0.0.1",
    "grpcio>=1.66.0",
    "structlog>=24.4.0",
    "ollama>=0.4.0",
    "Pillow>=10.0.0",
]

[project.scripts]
coremind-plugin-tapo = "coremind_plugin_tapo.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["coremind_plugin_tapo"]
