[project]
name = "coremind-plugin-webcam"
version = "0.1.0"
description = "USB Webcam sensor plugin for CoreMind."
requires-python = ">=3.12"
dependencies = [
    "coremind>=0.0.1",
    "grpcio>=1.66.0",
    "structlog>=24.4.0",
]

[project.scripts]
coremind-plugin-webcam = "coremind_plugin_webcam.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["coremind_plugin_webcam"]
